Tested sum for numbers with different sizes -> It works. The performance test is not satisfying.

--- a/gillespie.xcodeproj/xcshareddata/xcschemes/gillespie.xcscheme
+++ b/gillespie.xcodeproj/xcshareddata/xcschemes/gillespie.xcscheme
@@ -56,6 +56,10 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "-S 1024"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "-N 1000"
             isEnabled = "YES">
          </CommandLineArgument>
