--- a/gillespie.xcodeproj/xcshareddata/xcschemes/gillespie.xcscheme
+++ b/gillespie.xcodeproj/xcshareddata/xcschemes/gillespie.xcscheme
@@ -55,6 +55,10 @@
             argument = "-s 0"
             isEnabled = "YES">
          </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-S 5"
+            isEnabled = "YES">
+         </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
