added output directory falg

--- a/gillespie.xcodeproj/xcshareddata/xcschemes/gillespie.xcscheme
+++ b/gillespie.xcodeproj/xcshareddata/xcschemes/gillespie.xcscheme
@@ -56,6 +56,10 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "-o &quot;/Users/michele/Dropbox&quot;"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "-S 2"
             isEnabled = "YES">
          </CommandLineArgument>
